# wasm-kernel

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  x86_64-unknown-uefi.json
api/: Cargo.toml
ovmf/: OVMF.fd  OVMF_VARS.fd
ovmf/usr/share/edk2.git/ovmf-x64/: OVMF-need-smm.fd  OVMF-with-csm.fd  OVMF_CODE-need-smm.fd  OVMF_CODE-with-csm.fd  UefiShell.iso
src/: fs.rs  main.rs  wasm.rs
